--- a/demo.html
+++ b/demo.html
@@ -75,7 +75,7 @@
         <p style="color:aliceblue ; margin-left: 600px;  margin-top: 200px;">Start Bootstrap has everything you need to
             get your new website up and running in no time! Choose <br>one of our
             open
-            source, free to download, and easy to use themes! No strings attached!</p>
+            source, free to daownload, and easy to use themes! No strings attached!</p>
         <button>GET STARTED!</button>
     </div>
 
